fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
 }
 .main {
   margin-top: 100px;
